# Balda

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: balda.hpp  daemon.cpp  daemon.h  exception.hpp  logger.cpp  logger.hpp  server.cpp  server.hpp
web/: index.html
web/css/: button_style.css  style.css  text_uuid_style.css
web/js/: requests.js  smoke.js  timer.js
